--- a/Acembly.Ftx/ui/src/index.scss
+++ b/Acembly.Ftx/ui/src/index.scss
@@ -6,6 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+
+  background-color: #eff1f6;
+  
 }
 
 code {
